NetBSD Problem Report #47385

From www@NetBSD.org  Sun Dec 30 18:09:23 2012
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [149.20.53.66])
	by www.NetBSD.org (Postfix) with ESMTP id 4B1CE63E33E
	for <gnats-bugs@gnats.NetBSD.org>; Sun, 30 Dec 2012 18:09:23 +0000 (UTC)
Message-Id: <20121230180922.5E54063E33E@www.NetBSD.org>
Date: Sun, 30 Dec 2012 18:09:22 +0000 (UTC)
From: er.abhinav.upadhyay@gmail.com
Reply-To: er.abhinav.upadhyay@gmail.com
To: gnats-bugs@NetBSD.org
Subject: Fix a typo in malloc.c
X-Send-Pr-Version: www-1.0

>Number:         47385
>Category:       lib
>Synopsis:       Fix a typo in malloc.c
>Confidential:   no
>Severity:       non-critical
>Priority:       low
>Responsible:    lib-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sun Dec 30 18:10:01 +0000 2012
>Closed-Date:    Sun Dec 30 22:24:37 +0000 2012
>Last-Modified:  Sun Dec 30 22:24:37 +0000 2012
>Originator:     Abhinav Upadhyay
>Release:        NetBSD-current
>Organization:
>Environment:
NetBSD  6.99.15 NetBSD 6.99.15 (GENERIC) #0: Fri Nov 30 23:27:05 UTC 2012  builds@b6.netbsd.org:/home/builds/ab/HEAD/i386/201211301540Z-obj/home/builds/ab/HEAD/src/sys/arch/i386/compile/GENERIC i386
>Description:
The comment at line 1131 in malloc.c should say "Recursion" instead of "Recusion" :)
>How-To-Repeat:

>Fix:
Index: malloc.c
===================================================================
RCS file: /cvsroot/src/lib/libc/stdlib/malloc.c,v
retrieving revision 1.54
diff -u -r1.54 malloc.c
--- malloc.c	18 May 2011 01:59:39 -0000	1.54
+++ malloc.c	29 Dec 2012 23:39:11 -0000
@@ -1128,7 +1128,7 @@
     return;
 }

-static int malloc_active; /* Recusion flag for public interface. */
+static int malloc_active; /* Recursion flag for public interface. */
 static unsigned malloc_started; /* Set when initialization has been done */

 static void *

>Release-Note:

>Audit-Trail:
From: "David A. Holland" <dholland@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/47385 CVS commit: src/lib/libc/stdlib
Date: Sun, 30 Dec 2012 21:23:20 +0000

 Module Name:	src
 Committed By:	dholland
 Date:		Sun Dec 30 21:23:20 UTC 2012

 Modified Files:
 	src/lib/libc/stdlib: malloc.c

 Log Message:
 typo in comment, from Abhinav Upadhyay in PR 47385


 To generate a diff of this commit:
 cvs rdiff -u -r1.54 -r1.55 src/lib/libc/stdlib/malloc.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: jnemeth@NetBSD.org
State-Changed-When: Sun, 30 Dec 2012 22:24:37 +0000
State-Changed-Why:
Fixed by dholland@.  No need to do a pullup for a comment typo.
Thanks for the PR!


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.