typo in comment, from Abhinav Upadhyay in PR 47385